--- a/src/components/Navbar/SideBar.module.css
+++ b/src/components/Navbar/SideBar.module.css
@@ -1,8 +1,8 @@
 .menu a {
   color: rgb(54, 54, 248);
+  text-decoration: none;
 }
 .menu a:hover,
 a.active {
   color: rgb(251, 233, 38);
-  text-decoration: underline;
 }
